Commiting a basic weather app without styling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
+<!DOCTYPE html>
 <html ng-app="weatherApp">
+	<head>
+		<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Reset CSS -->
+    <!-- <link rel="stylesheet" href="./reset.css"> -->
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./styles.css">
+		<title></title>
+	</head>
 	<body ng-controller="mainCtrl">
 
-		<p>{{test}}</p>
+		<form ng-submit="getWeather(city)">
+			<input ng-model="city" class="weather-search">
+		</form>
+
+		<h2>Location: {{weather.name}}</h2>
+		<h3>Description: {{weather.weather[0].description}}</h3>
+		<h4>Temp: {{temp}}</h4>
+		<h4>Wind speed: {{weather.wind.speed}} mph</h4>
+		<img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"/>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
 		<script src="app.js"></script>
